# llm-multiagent-swarm

./: .gitignore  AGENTS.md  BENCHMARK.md  EXPERIMENT_LOG.md  PAPER_LLM-JEPA.md  README.md  SCRATCHPAD.md  TEST_RESULTS.md  benchmark.py  benchmark_arch.py  benchmark_hard.py  chaos_monkey.sh  example_scratchpad_output.md  gaia_eval.py  llm_jepa_plot.py  llm_jepa_smoke_test.py  pyproject.toml  setup-hooks.sh  swarm.py  swarm2.py  swarm_What_s_happening_with_AI_regulation_in_the_EU_1783027079.md  swarm_config.json  test_queries.sh  test_tools.py
.githooks/: post-commit
.github/workflows/: ci.yml
demo-swarm/: README.md
demo-swarm/swarm/: config.py  orchestrator.py  runner.py  scratchpad.py  search.py  tools.py
journal/: 2026-07-02.md
swarm/: __init__.py  __main__.py  complexity.py  orchestrator.py  output.py  preflight.py  runner.py  scratchpad.py  synthesis.py  tools.py  worker.py
swarm/prompts/: __init__.py  bundle_code.md  bundle_default.md  bundle_files.md  bundle_search.md  bundle_vision.md  default_worker.md  fallback_user.md  mode_objective.md  mode_subjective.md  preflight.md  preflight_system.md  synthesis.md  synthesis_objective.md  synthesis_subjective.md  worker.md
swarm/tools/: __init__.py  base.py  file_reader.py  python_exec.py  registry.py  scratchpad.py  vision.py  web_extract.py  web_search.py
swarm/tui/: __init__.py  app.py  session.py  store.py  widgets.py
tests/: test_argparse.py  test_chaos.py  test_prompts.py  test_tui.py
